--- a/some_cool_animals.Rmd
+++ b/some_cool_animals.Rmd
@@ -23,7 +23,7 @@ The organization of this document probably seems strange. That's because it's pa
 
 - Rotate their hind feet 180 degrees for climbing things
 - Not endangered, very elusive
-- Closely related to racoons and not cats
+- Closely related to raccoons and not cats
 
 #### SHARKS!!!
 
